# Arxiv-newest-paper-crawler

./: .env.example  .gitignore  AGENTS.md  README.md  arxiv_collector.py  config.py  favorites.json  gnaroshi.app.json  main.py  papers.json  pyproject.toml  requirements.txt  test_showcase.py  translator.py  webapp.py
.github/workflows/: ci.yml  release.yml
ArxivDiscoveryApp/: Info.plist  Package.swift  build_app.sh  install_app.sh
ArxivDiscoveryApp/Sources/ArxivDiscoveryApp/: AppSettings.swift  AppTheme.swift  AppViewModel.swift  ArxivDiscoveryApp.swift  ContentView.swift  DiscoveryCalendarView.swift  GeminiTranslator.swift  KeychainStore.swift  PaperDetailView.swift  SettingsView.swift  ShowcaseMode.swift
ArxivDiscoveryApp/Sources/ArxivDiscoveryCore/: ArxivClient.swift  BackupSnapshot.swift  DiscoveryHistory.swift  LibraryState.swift  Paper.swift  PaperRepository.swift  TranslationUsage.swift
ArxivDiscoveryApp/Sources/ArxivDiscoveryCoreChecks/: main.swift
ArxivDiscoveryApp/Sources/ArxivDiscoveryIntegration/: main.swift
docs/: architecture.md  candidate-schema.md  cross-repo-transition.md  design.md  distribution.md  migration.md  product.md
docs/decisions/: MDS-001-studio-discovery-provider.md
identity/app-icon/: AppIcon.icns  README.md  generate.sh  metadata.json
showcase/: README.md  manifest.json  manifest.template.json
src/arxiv_discovery/: __init__.py  cli.py  collector.py  config.py  contracts.py  legacy.py  models.py  provider.py  storage.py  translator.py
src/arxiv_discovery/web/: app.py
src/arxiv_discovery/web/templates/: all_papers.html  handoff_preview.html  index.html  layout.html  paper_detail.html
src/arxiv_paper_crawler/: __init__.py  cli.py  collector.py  config.py  runtime.py  storage.py  translator.py
templates/: all_papers.html  favorites.html  handoff_preview.html  index.html  index_legacy.html  layout.html  paper_detail.html
tests/: test_cli.py  test_collector.py  test_config.py  test_legacy_baseline.py  test_packaging.py  test_provider.py  test_runtime.py  test_storage.py  test_translator.py
tests/fixtures/: legacy-baseline.json
tools/: build_app_icon.py
